package cz.osu.kip.swi.Methods;

public enum QueryModes {
    EVERYTHING,
    FILTERED
}
